--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <h1 class="max">Maximum Price</h1>
       <div class="priceRange">
         <input type="range" class="rangeBtn" />
-        <span class="filterPrice">$140</span>
+        <span class="priceValue">
+          <!-- $140 -->
+        </span>
       </div>
     </div>
     <div class="rightSection">
