--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
       rel="stylesheet"
     />
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/2232/2232688.png" type="image/x-icon"/>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
   </head>
   <body>
+   
+
     <div class="container">
     <div class="leftSection">
+      <div class="logoSection">
+      <img src="https://cdn-icons-png.flaticon.com/128/2232/2232688.png"  class="brandLogo" alt="">
+      <span class="brandName">LIBROO</span>
+    </div>
+
       <input type="text" class="searchbox" placeholder="Search.." />
       <h1 class="category">Categories</h1>
       <ul class="cats">
@@ -44,6 +52,6 @@
 
 </div>
 
-    <script src="./app.js"></script>
+    <script src="./appv2.js"></script>
   </body>
 </html>
