successfully fetched images, titles, author name and other needed data in open-library API

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="graphic">Graphic Novel</li>
       </ul>
 
-      <h1 class="max">Maximum Price</h1>
+      <h1 class="max">Published Year</h1>
       <div class="priceRange">
         <input type="range" class="rangeBtn" />
         <span class="priceValue">
