--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   </head>
   <body>
+
+    <div class="preloader"></div>
    
 
     <div class="container">
@@ -26,14 +28,20 @@
       <span class="brandName">LIBROO</span>
     </div>
 
+    <form class="searcboxGroup" onsubmit ="return false">
       <input type="text" class="searchbox" placeholder="Search.." />
+      <button class="magnifyButton">
+      <img src="https://img.icons8.com/ios-filled/512/search.png" alt="" class="magnify"> 
+    </button>
+  </form>
+
       <h1 class="category">Categories</h1>
       <ul class="cats">
         <li class="all">All</li>
-        <li class="arts">Arts & Designs</li>
+        <li class="fiction">Fiction</li>
         <li class="children">Children's</li>
-        <li class="lifestyle">Lifestyle</li>
-        <li class="graphic">Graphic Novel</li>
+        <li class="nature">Nature</li>
+        <li class="religion">Religion</li>
       </ul>
 
       <h1 class="max">Published Year</h1>
